Migrate admin app to app table